refactor: rewrite RequestTimeoutMiddleware using StructuredTaskScope
Replace the executor-based implementation with StructuredTaskScope,
which provides two improvements:

1. ScopedValue inheritance — fork() propagates scoped-value bindings
   to the subtask thread, unlike executor.submit()
2. Structured shutdown — scope.close() waits for the subtask to finish,
   eliminating the need for a separate Closeable lifecycle

Timeout is configured via Configuration.withTimeout() rather than
Future.get(timeout), making intent explicit. enkan-web is compiled
with --enable-preview; applications must use --enable-preview at
runtime only if they reference this class.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>