@@ -7,60 +7,56 @@ import enkan.data.HttpRequest;
 import enkan.data.HttpResponse;
 import enkan.exception.MisconfigurationException;
 
-import java.io.Closeable;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
-import java.util.concurrent.Future;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.TimeoutException;
+import java.time.Duration;
+import java.util.concurrent.StructuredTaskScope;
 
 import static enkan.util.BeanBuilder.builder;
 
 /**
- * Middleware that enforces a per-request timeout for downstream processing.
+ * Middleware that enforces a per-request timeout for downstream processing,
+ * using {@link StructuredTaskScope}.
  *
- * <p>Each request is executed in a virtual thread. If the downstream middleware
- * chain does not complete within the configured timeout, this middleware cancels
- * the task and returns a {@code 504 Gateway Timeout} response (or any status
- * code configured via {@link #setTimeoutStatus(int)}).
+ * <p>The downstream chain runs in a virtual thread forked by
+ * {@link StructuredTaskScope}. If the chain does not complete within the
+ * configured timeout, the scope is cancelled and this middleware returns
+ * a {@code 504 Gateway Timeout} response (configurable via
+ * {@link #setTimeoutStatus(int)}).
  *
- * <p>This is equivalent to <a href="https://hono.dev/docs/middleware/builtin/timeout">
- * Hono's {@code timeout()} middleware</a>, using Java virtual threads for
- * efficient concurrency.
+ * <p>Using {@code StructuredTaskScope} provides two benefits over a plain
+ * executor:
+ * <ol>
+ *   <li><b>{@link java.lang.ScopedValue ScopedValue} inheritance</b> —
+ *       bindings active in the calling thread are inherited by the subtask,
+ *       consistent with how {@code StructuredTaskScope} is specified.</li>
+ *   <li><b>Structured shutdown</b> — {@code scope.close()} always waits for
+ *       the subtask thread to finish, so in-flight work cannot outlive the
+ *       scope boundary.</li>
+ * </ol>
+ *
+ * <h2>Preview API requirement</h2>
+ * <p>{@link StructuredTaskScope} is a preview API in Java 25. This class is
+ * compiled with {@code --enable-preview} as part of the enkan-web build.
+ * Applications that reference this class must also be <em>run</em> with
+ * {@code --enable-preview}; applications that do not reference it are
+ * unaffected.
  *
  * <h2>Usage</h2>
  * <pre>{@code
  * app.use(new RequestTimeoutMiddleware());
  * }</pre>
  *
- * <h2>Custom timeout</h2>
- * <pre>{@code
- * var m = new RequestTimeoutMiddleware();
- * m.setTimeoutMillis(5_000); // 5 seconds
- * app.use(m);
- * }</pre>
- *
  * <h2>Middleware ordering note (Doma2)</h2>
- * <p>Because the downstream chain runs in a separate virtual thread, any
- * {@code ThreadLocal}-based context is <em>not</em> inherited by that thread.
- * Most Enkan middleware passes state via the request object and is unaffected.
- * The only known exception is Doma2's {@code LocalTransaction}, which stores
- * its context in a {@code ThreadLocal}. When using Doma2, place this middleware
- * <em>inside</em> (downstream of) the Doma2 transaction middleware so that both
- * run on the same thread.
- *
- * <h2>Streaming responses</h2>
- * <p>Streaming response bodies ({@code StreamingBody}) written after the
- * timeout deadline are undefined. Do not use this middleware with streaming
- * handlers that rely on post-response writes.
+ * <p>Because the downstream chain runs in a separate virtual thread,
+ * {@code ThreadLocal}-based context is <em>not</em> inherited. Most Enkan
+ * middleware passes state via the request object and is unaffected. The only
+ * known exception is Doma2's {@code LocalTransaction}. When using Doma2,
+ * place this middleware <em>inside</em> (downstream of) the Doma2 transaction
+ * middleware.
  *
  * @author kawasima
  */
 @Middleware(name = "requestTimeout")
-public class RequestTimeoutMiddleware implements WebMiddleware, Closeable {
-
-    private final ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
+public class RequestTimeoutMiddleware implements WebMiddleware {
 
     private long timeoutMillis = 30_000;
     private int  timeoutStatus = 504;
@@ -68,14 +64,17 @@ public class RequestTimeoutMiddleware implements WebMiddleware, Closeable {
     @Override
     public <NNREQ, NNRES> HttpResponse handle(HttpRequest request,
             MiddlewareChain<HttpRequest, HttpResponse, NNREQ, NNRES> chain) {
-        Future<HttpResponse> future = executor.submit(
-                () -> castToHttpResponse(chain.next(request)));
-        try {
-            return future.get(timeoutMillis, TimeUnit.MILLISECONDS);
-        } catch (TimeoutException e) {
-            future.cancel(true);
-            return timeoutResponse();
-        } catch (ExecutionException e) {
+        try (var scope = StructuredTaskScope.open(
+                StructuredTaskScope.Joiner.<HttpResponse>awaitAllSuccessfulOrThrow(),
+                cf -> cf.withTimeout(Duration.ofMillis(timeoutMillis)))) {
+            var task = scope.fork(() -> castToHttpResponse(chain.next(request)));
+            try {
+                scope.join();
+            } catch (StructuredTaskScope.TimeoutException e) {
+                return timeoutResponse();
+            }
+            return task.get();
+        } catch (StructuredTaskScope.FailedException e) {
             Throwable cause = e.getCause();
             if (cause instanceof RuntimeException re) throw re;
             if (cause instanceof Error err) throw err;
@@ -113,15 +112,5 @@ public class RequestTimeoutMiddleware implements WebMiddleware, Closeable {
      */
     public void setTimeoutStatus(int timeoutStatus) {
         this.timeoutStatus = timeoutStatus;
-    }
-
-    /**
-     * Shuts down the internal virtual thread executor.
-     * Call this when the middleware is no longer needed (e.g., on application shutdown)
-     * to allow in-flight virtual threads to complete and release resources.
-     */
-    @Override
-    public void close() {
-        executor.shutdown();
     }
 }
